cmake_minimum_required(VERSION 3.17)
project(C)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_C_FLAGS   "-m32")



add_executable(time basic/time/time.c)
add_executable(signal basic/signal/signal.c)
add_executable(typedef basic/def/typedef.c)
add_executable(define_1 basic/def/define_1.c)
 
 
add_executable(define_placeholder basic/def/define_placeholder.c)
add_executable(define_value_name basic/def/define_value_name.c)
add_executable(define_mutil_type basic/def/define_mutil_type.cpp)
add_executable(undef basic/def/undef.c)
add_executable(condition_def basic/def/condition_def.c)
add_executable(point_expr basic/point/point_expr.c)
add_executable(point_border basic/point/point_border.c)
 
add_executable(string_test basic/char/ch_and_string.c)
add_executable(test_char basic/char/test_char.c)
add_executable(printf_scanf basic/io/printf_scanf.cpp)
add_executable(func_point_trans basic/point/func/func_point_trans.c)
add_executable(test basic/point/func/test.cpp)
add_executable(func_point UUCP/func/func_point.c)
add_executable(func_point2 UUCP/func/func_point2.c)
add_executable(func_point3 UUCP/func/func_point_trans.c)
add_executable(func_point4 basic/point/func/func_point4.c)
add_executable(func_point5 basic/point/func/func_point5.c)
add_executable(func_point6 basic/point/func/func_point6.c)
add_executable(func_name basic/point/func/func_name.c)
add_executable(func_and_array_name_diff basic/point/func/func_and_array_name_diff.c)
add_executable(array_sketch basic/array/array_sketch.c)
add_executable(array_point_diff basic/array/array_point_diff.c)
add_executable(array_malloc basic/array/array_malloc.c)
add_executable(hello basic/test/hello.c)

add_executable(list DataStructure/list/linked_list/book_example/list.c)
add_executable(linked_list DataStructure/list/linked_list/linked_list.c)
add_executable(test_linked_list DataStructure/list/linked_list/test_linked_list.c)

add_executable(testlist DataStructure/list/linked_list/book_example/testlist.c)

add_executable(struct basic/struct/struct.c)
add_executable(file2 basic/test/file2.c  basic/test/file1.c)
 #add_executable(file1 basic/test/file1.c)
add_executable(stack_invoke basic/memery/stack_invoke.c)
add_executable(number_convert basic/math/number_convert.c)
add_executable(move_byte ComputerSystems/ch02/se2_1/move_byte.c)
add_executable(sprintf basic/io/sprintf.c)
add_executable(float ComputerSystems/ch02/se2_1/float.c)
add_executable(malloc2 basic/memery/malloc2.c)
add_executable(malloc basic/memery/malloc.c)
add_executable(dynamic_array DataStructure/list/dynamic_array/dynamic_array.c)
add_executable(arr basic/test/arr.c)
add_executable(test_dynamic_array DataStructure/list/dynamic_array/test_dynamic_array.c)
add_executable(link_list DataStructure/list/dynamic_array/link_list.c)

add_executable(seq_stack DataStructure/list/seq_stack/seq_stack.c)
add_executable(linked_stack DataStructure/list/linked_stack/linked_stack.c)
add_executable(test_malloc UUCP/mem/test_malloc.c)
add_executable(basic UUCP/mem/basic.h)
add_executable(test_calloc UUCP/mem/test_calloc.c)
add_executable(test_realloc UUCP/mem/test_realloc.c)
add_executable(test_free UUCP/mem/test_free.c)
add_executable(swap UUCP/func/swap.c)
add_executable(const_param UUCP/func/const_param.c)
add_executable(return_point UUCP/func/return_point.c)

add_executable(func_point_return UUCP/func/func_point_return.c)
add_executable(func_point_array UUCP/func/func_point_array.c)
add_executable(two_dimension_array UUCP/array/two_dimension_array.c)
add_executable(ctools softwares/ctools/ctools.c)
add_executable(get_window softwares/ctools/get_window.c)